# esp_hid_serial_bridge

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  esp_hid_serial_bridge.c  esp_hidd_prf_api.c  esp_hidd_prf_api.h  hid_dev.c  hid_device_le_prf.c  idf_component.yml
